--- a/index.html
+++ b/index.html
@@ -3,10 +3,34 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- font awesome and google font-->
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+      integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Document</title>
   </head>
+
   <body>
+    <h1 class="heading">
+      <img
+        class="logo"
+        src="/assets/images/logo/logo.png"
+        alt="love maths logo"
+      />
+      Love Maths
+    </h1>
+
+    <div class="game-area"></div>
+
+    <div class="score-area">
+      <div class="scores">Correct score <span id="score">0</span></div>
+      <div class="scores">Incorrect score <span id="incorrect">0</span></div>
+    </div>
+
     <script src="assets/js/script.js"></script>
   </body>
 </html>
